Improved timeline and fixed scrolling
Timestamp formatting has been improved to show two digit minutes and
hours. The scroll step was incorrectly fixed to a too small step size,
it now depends on the window height which allows proper scroll steps.

--- a/css/effects.css
+++ b/css/effects.css
@@ -1,3 +1,3 @@
-.main-item, .timeline-item {
-	transition: top 150ms, height 150ms, opacity 150ms;
+.main-item {
+	/*transition: top 150ms, height 150ms, opacity 150ms;*/
 }
